--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  font-family: 'Montserrat', sans-serif;
+  
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.sombra{
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
+-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
+box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
 }
