--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
 -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
 box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
+}
 
 * {
   font-family: 'Montserrat', sans-serif;
