adiciona professor e mostra lista de professores

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,9 @@
   font-family: 'Montserrat', sans-serif;
   
 }
+.calmaAmor{
+  transform: translate(-50%, -50%);
+}
 .sombra{
   -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
 -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.26);
